@@ -1,4 +1,4 @@
-README for Unbound 1.8.2
+README for Unbound 1.8.3
 Copyright 2007 NLnet Labs
 http://unbound.net
 
