@@ -1,7 +1,7 @@
 #
 # Example configuration file.
 #
-# See unbound.conf(5) man page, version 1.8.2.
+# See unbound.conf(5) man page, version 1.8.3.
 #
 # this is a comment.
 
