@@ -1,4 +1,4 @@
-.TH "libunbound" "3" "Dec  4, 2018" "NLnet Labs" "unbound 1.8.2"
+.TH "libunbound" "3" "Dec 11, 2018" "NLnet Labs" "unbound 1.8.3"
 .\"
 .\" libunbound.3 -- unbound library functions manual
 .\"
@@ -43,7 +43,7 @@
 .B ub_ctx_zone_remove,
 .B ub_ctx_data_add,
 .B ub_ctx_data_remove
-\- Unbound DNS validating resolver 1.8.2 functions.
+\- Unbound DNS validating resolver 1.8.3 functions.
 .SH "SYNOPSIS"
 .B #include <unbound.h>
 .LP
