@@ -1,4 +1,4 @@
-.TH "unbound-anchor" "8" "Dec  4, 2018" "NLnet Labs" "unbound 1.8.2"
+.TH "unbound-anchor" "8" "Dec 11, 2018" "NLnet Labs" "unbound 1.8.3"
 .\"
 .\" unbound-anchor.8 -- unbound anchor maintenance utility manual
 .\"
