@@ -1,4 +1,4 @@
-.TH "unbound-control" "8" "Dec  4, 2018" "NLnet Labs" "unbound 1.8.2"
+.TH "unbound-control" "8" "Dec 11, 2018" "NLnet Labs" "unbound 1.8.3"
 .\"
 .\" unbound-control.8 -- unbound remote control manual
 .\"
