@@ -1,4 +1,4 @@
-.TH "unbound\-host" "1" "Dec  4, 2018" "NLnet Labs" "unbound 1.8.2"
+.TH "unbound\-host" "1" "Dec 11, 2018" "NLnet Labs" "unbound 1.8.3"
 .\"
 .\" unbound-host.1 -- unbound DNS lookup utility
 .\"
