@@ -1,4 +1,4 @@
-.TH "unbound" "8" "Dec  4, 2018" "NLnet Labs" "unbound 1.8.2"
+.TH "unbound" "8" "Dec 11, 2018" "NLnet Labs" "unbound 1.8.3"
 .\"
 .\" unbound.8 -- unbound manual
 .\"
@@ -9,7 +9,7 @@
 .\"
 .SH "NAME"
 .B unbound
-\- Unbound DNS validating resolver 1.8.2.
+\- Unbound DNS validating resolver 1.8.3.
 .SH "SYNOPSIS"
 .B unbound
 .RB [ \-h ]
