@@ -1,4 +1,4 @@
-.TH "unbound.conf" "5" "Dec  4, 2018" "NLnet Labs" "unbound 1.8.2"
+.TH "unbound.conf" "5" "Dec 11, 2018" "NLnet Labs" "unbound 1.8.3"
 .\"
 .\" unbound.conf.5 -- unbound.conf manual
 .\"
