@@ -1,3 +1,7 @@
+11 December 2018: Wouter
+	- Fix dns64 allocation in wrong region for returned internal queries.
+	- And 1.8.3 release with this dns64 crash fix included.
+
 29 November 2018: Wouter
 	- iana portlist updated.
 	- Fix chroot auth-zone fix to remove chroot prefix.
